GET and GET by id

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://somloi_david:barlang@cluster0.pozds.mongodb.net/Desktop
+DATABASE_URL = mongodb+srv://admin:admin@jedlikcluster0.dydxn.mongodb.net/sample_restaurants
